--- a/index.html
+++ b/index.html
@@ -14,15 +14,26 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6">
-                    <img src="img/imagem4.png" alt="Imagem 1" width="500" class="img-fluid rounded">
+                    <img src="img/imagem4.png" alt="Imagem 1" class="img-fluid rounded">
                 </div>
                 <div class="col-md-6">
                     <h1 class="display-4">AutomatizaWeb</h1>
                     <p class="lead">Automatize suas atualizações de página de forma simples e confiável</p>
+                    <button class="btn btn-primary btn-lg btn-entrar">Entrar</button>
                 </div>
             </div>
         </div>
     </header>
+    <section>
+        <div class="container text-center">
+            <div class="floating-box d-flex">
+                <h3>Junte-se a nós e faça parte da revolução digital! Cadastre-se agora para desbloquear um mundo de possibilidades, inovação e excelência.</h3>
+                <button class="btn btn-primary btn-cadastrar-lg" style="font-size: 18px; padding: 5px 70px;">
+                    <span style="font-size: 18px; padding: 15px 20px;">Cadastrar</span>
+                </button>
+            </div>
+        </div>
+    </section>
 
 <section class="container my-5">
     <div class="row justify-content-center">
