modified:   index.html modified:   style.css

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
-    <title>AutomatizaWeb - Automação de Atualizações</title>
+    <title>AutomatizaWeb</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -17,20 +17,23 @@
                     <img src="img/imagem4.png" alt="Imagem 1" class="img-fluid rounded">
                 </div>
                 <div class="col-md-6">
-                    <h1 class="display-4">AutomatizaWeb</h1>
-                    <p class="lead">Automatize suas atualizações de página de forma simples e confiável</p>
-                    <button class="btn btn-primary btn-lg btn-entrar">Entrar</button>
+                    <h1 class="display-2">AutomatizaWeb</h1>
+                    <p class="lead">Transforme suas aplicações em experiências automatizadas, descomplicadas e confiáveis.</p>
+                    <a class="btn btn-outline-primary" href="URL_DO_SEU_LINK" style="font-size: 18px; padding: 2px 50px; background-color: #ccc8e9;">
+                        <span>Entrar</span>
+                    </a>   
                 </div>
             </div>
         </div>
     </header>
     <section>
+        <hr class="listar">
         <div class="container text-center">
             <div class="floating-box d-flex">
-                <h3>Junte-se a nós e faça parte da revolução digital! Cadastre-se agora para desbloquear um mundo de possibilidades, inovação e excelência.</h3>
-                <button class="btn btn-primary btn-cadastrar-lg" style="font-size: 18px; padding: 5px 70px;">
-                    <span style="font-size: 18px; padding: 15px 20px;">Cadastrar</span>
-                </button>
+                <h5>Junte-se a nós e faça parte da revolução digital! <br> Cadastre-se agora para desbloquear um mundo de possibilidades, inovação e excelência.</h5>
+                <a class="btn btn-outline-primary" href="URL_DO_SEU_LINK" style="font-size: 18px; padding: 2px 70px;">
+                    <span>Cadastrar</span>
+                </a>                
             </div>
         </div>
     </section>
