modified:   index.html new file:   login.html modified:   package-lock.json modified:   package.json new file:   server.ts

--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
                 <div class="col-md-6">
                     <h1 class="display-2">AutomatizaWeb</h1>
                     <p class="lead">Transforme suas aplicações em experiências automatizadas, descomplicadas e confiáveis.</p>
-                    <a class="btn btn-outline-primary" href="login.html" style="font-size: 18px; padding: 2px 50px; background-color: #ccc8e9;">
+                    <a class="btn btn-outline-primary" href="URL_DO_SEU_LINK" style="font-size: 18px; padding: 2px 50px; background-color: #ccc8e9;">
                         <span>Entrar</span>
                     </a>   
                 </div>
